--- a/_includes/partials/buttons.html
+++ b/_includes/partials/buttons.html
@@ -1,4 +1,4 @@
-<section class="section-buttons">
+<section class="section section--buttons">
     <div class="container">
         {% if include.section.text %}
             {{ include.section.text | markdownify }}
