--- a/_includes/partials/featureGroup.html
+++ b/_includes/partials/featureGroup.html
@@ -1,4 +1,4 @@
-<section class="section-feature-group">
+<section class="section section--feature-group">
     <h2>{{ include.section.heading }}</h2>
     <h3>{{ include.section.subheading }}</h3>
 
