--- a/_includes/partials/guideOverview.html
+++ b/_includes/partials/guideOverview.html
@@ -1,4 +1,4 @@
-<section class="child-links">
+<section class="section section--guide-overview">
     <div class="container">
         <ul>
             {% include hashbrown/get_child_content_ids id=page.meta.id %}
