--- a/_layouts/sectionPage.html
+++ b/_layouts/sectionPage.html
@@ -10,9 +10,9 @@ layout: compress
         {% include main/navigation.html %}
 
         <div class="page {% if page.url == "/" %}page--home{% endif %}"> 
-            <section class="section-banner">
+            <section class="section--banner">
                 <div class="container">
-                    <video class="section-banner__video-background" loop muted autoplay poster="/assets/img/bg-secondary.jpg">
+                    <video class="section--banner__video-background" loop muted autoplay poster="/assets/img/bg-secondary.jpg">
                         <source src="/assets/webm/bg-secondary.webm" type="video/webm">
                     </video>
 
