--- a/_sass/sections/banner.scss
+++ b/_sass/sections/banner.scss
@@ -1,7 +1,7 @@
 /**
  * A banner section (also known as a "hero" element)
  */
-.section-banner {
+.section--banner {
     height: 40vh;
     display: flex;
     align-items: center;
