--- a/_sass/sections/buttons.scss
+++ b/_sass/sections/buttons.scss
@@ -1,7 +1,7 @@
 /**
  * A group of buttons
  */
-.section-buttons {
+.section--buttons {
     height: 30vh;
     display: flex;
     align-items: center;
