--- a/_sass/sections/feature-group.scss
+++ b/_sass/sections/feature-group.scss
@@ -1,7 +1,7 @@
 /**
  * A group of features
  */
-.section-feature-group {
+.section--feature-group {
     text-align: center;
     padding: 3rem 0;
 
