--- a/css/client.scss
+++ b/css/client.scss
@@ -15,8 +15,10 @@
 @import 'footer';
 @import 'iframes';
 
+@import 'sections/section';
 @import 'sections/banner';
 @import 'sections/buttons';
+@import 'sections/guide-overview';
 @import 'sections/rich-text';
 @import 'sections/feature-group';
 @import 'sections/news-feed';
