--- a/_includes/partials/richTextSection.html
+++ b/_includes/partials/richTextSection.html
@@ -1,4 +1,4 @@
-<section class="section-rich-text">
+<section class="section section--rich-text">
     <div class="container">
         {% if include.section.text %}
             {{ include.section.text | markdownify }}
