--- a/_sass/sections/banner.scss
+++ b/_sass/sections/banner.scss
@@ -44,4 +44,12 @@
         min-height: 100%;
         z-index: -1;
     }
+
+    h1 {
+        margin: 1rem 0;
+    }
+
+    h3 {
+        margin: 1rem 0;
+    }
 }
